k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devtrack-ingress
  namespace: devtrack

spec:
  ingressClassName: nginx

  rules:
  - host: devtrackp.local 
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000


  - host: devtrack.local 
    http:

      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
              
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
